cluster/apps/traefik/traefik/ingress/qdrant/ingress-routes.yaml
---
# yaml-language-server: $schema=https://datreeio.github.io/CRDs-catalog/traefik.io/ingressroute_v1alpha1.json
# Documentation: https://doc.traefik.io/traefik/reference/routing-configuration/kubernetes/crd/http/ingressroute/
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: ingress-routes-lan-https
  namespace: qdrant-system
  annotations:
    cert-manager.io/cluster-issuer: ${CLUSTER_ISSUER}
    external-dns.alpha.kubernetes.io/hostname: qdrant.lan.${EXTERNAL_DOMAIN}
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`qdrant.lan.${EXTERNAL_DOMAIN}`)
      middlewares:
        - name: compress
      services:
        - name: qdrant
          namespace: qdrant-system
          passHostHeader: true
          port: 6333
  tls:
    secretName: "qdrant-lan-${EXTERNAL_DOMAIN/./-}-tls"
